# uni

./: .gitignore  CHANGELOG.md  README.md  bootstrap-installer.sh  installer.sh  uni  uni-2.1.3.txt  uni-install  uni-v1.3.0.txt  uni-v2.0.0.txt  walkthrough-installer.sh
packaging/: install-ui.sh  uni-index.service  uni-index.timer  uni.desktop
uni-ui/: CMakeLists.txt  README.md
uni-ui/resources/styles/: uni-ui.qss
uni-ui/src/: DownloadQueue.cpp  DownloadQueue.h  IndexWatcher.cpp  IndexWatcher.h  MainWindow.cpp  MainWindow.h  PackageDetailPane.cpp  PackageDetailPane.h  ProcessManager.cpp  ProcessManager.h  ResultsDelegate.cpp  ResultsDelegate.h  ResultsModel.cpp  ResultsModel.h  SearchBar.cpp  SearchBar.h  SettingsPane.cpp  SettingsPane.h  SourceBenchmark.cpp  SourceBenchmark.h  Theme.cpp  Theme.h  main.cpp
